Fixed some bugs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,9 +33,6 @@
 		{% endblock %}
 
 		<style>
-			table.th-50{
-				text-transform: uppercase;
-			}
 			table.th-50 th {
 				width: 30%;
 			}
@@ -83,7 +80,6 @@
 			.table.commande th,
 			.commande td {
 				padding: 10px;
-				text-transform: uppercase;
 			}
 			.commande input,
 			.commande select,
@@ -112,6 +108,7 @@
 			}
 			table.filtre tbody tr td{
 				padding: 5px;
+				width: 33%;
 			}
 			table.contact{
 				text-transform: uppercase;
