--- a/templates/client/composants/_form_contact.html.twig
+++ b/templates/client/composants/_form_contact.html.twig
@@ -7,9 +7,9 @@
 				{% if app.request.attributes.get('_route') == 'client_edit' %}
 
 					{% if client.civilite == 'Mr' %}
-						<img src="{{ asset('img/user.png') }}" class="img-fluid" alt="">
+						<img src="{{ asset('img/user.jpg') }}" class="img-fluid" alt="">
 					{% else %}
-						<img src="{{ asset('img/femmel.png') }}" class="img-fluid" alt="">
+						<img src="{{ asset('img/femme.jpg') }}" class="img-fluid" alt="">
 					{% endif %}
 
 				{% else %}
