--- a/templates/commande/_table_card.html.twig
+++ b/templates/commande/_table_card.html.twig
@@ -10,7 +10,7 @@
 
 		<div class="table-rep-plugin">
 			<div class="table-responsive mb-0" data-bs-pattern="priority-columns">
-				<table id="tech-companies-1" class="table no-radius table-striped">
+				<table id="tech-companies-1" class="table no-radius table-striped table-hover">
 					<thead class="text-left bg-light text-dark font-weight-bold">
 						<tr>
 							<th>NUM VEHICULE</th>
@@ -65,7 +65,7 @@
 							</tr>
 						{% else %}
 							<tr>
-								<td colspan="7">Aucune données</td>
+								<td colspan="7" class="text-center"><i class="fa-2x fas fa-search text-muted"></i> Aucune données</td>
 							</tr>
 						{% endfor %}
 
