--- a/templates/commande/composants/_filtre.html.twig
+++ b/templates/commande/composants/_filtre.html.twig
@@ -6,8 +6,11 @@
          <td>{{ form_row(form.vehicules) }}</td>
          <td>{{ form_row(form.clients) }}</td>
          <td>{{ form_row(form.destinations) }}</td>
+      </tr>
+      <tr>
          <td>{{ form_row(form.statut) }}</td>
-         <td style="text-align: right;"><button class="btn btn-light w-100"><i class="mdi mdi-filter"></i> Filtrer</button></td>
+         <td></td>
+         <td style="text-align: right;"><button class="btn btn-light"><i class="mdi mdi-filter"></i> Filtrer</button></td>
       </tr>
    </tbody>
 </table>
