--- a/templates/espace_utilisateur/edit_password.html.twig
+++ b/templates/espace_utilisateur/edit_password.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mettre à jour du mot de passe
-{% endblock %}
+{% block title %}Vos accès{% endblock %}
 
 {% block links %}
 
@@ -11,7 +10,7 @@
       Comptes utilisateurs</a>
 </li>
 <li class="breadcrumb-item active" aria-current="page">
-   Mise à jour du mot de passe <strong>{{ user.nom ~ " " ~ user.prenom }}</strong>
+   Vos accès <strong>{{ user.nom ~ " " ~ user.prenom }}</strong>
 </li>
 
 {% endblock %}
@@ -21,14 +20,9 @@
 <div class="card border">
    <div class="card-header bg-primary">
       <h4 class="font-size-18 py-2 text-light">
-         Mettre à jour du mot de passe
-         {% if app.request.attributes.get('_route') == 'users_edit' %}
-         de
+         Vos accès
          {{ user.nom }}
          {{ user.prenom }}
-         {% else %}
-         utilisateur
-         {% endif %}
       </h4>
    </div>
    <div class="card-body py-5">
