--- a/templates/factures/index.html.twig
+++ b/templates/factures/index.html.twig
@@ -53,7 +53,7 @@
             </tr>
             {% else %}
             <tr>
-                <td colspan="5">Aucune donnée</td>
+                <td colspan="5" class="text-center"><i class="fa-2x fas fa-search text-muted"></i> Aucune donnée</td>
             </tr>
             {% endfor %}
         </tbody>
