--- a/templates/itineraire/_btn_links.html.twig
+++ b/templates/itineraire/_btn_links.html.twig
@@ -2,6 +2,7 @@
 	<i class="mdi mdi-calendar-multiple"></i>
 	Nouvelle commande</a>&nbsp;&nbsp;
 <a href="{{ path('itineraire_index') }}" class="btn btn-primary">
+	<i class="mdi mdi-routes"></i>
 	Itineraires</a>&nbsp;
 <a href="{{ path('itineraire_new') }}" class="btn btn-primary">
 	Ajouter un itineraire</a>
