--- a/templates/conducteur/_form.html.twig
+++ b/templates/conducteur/_form.html.twig
@@ -12,7 +12,7 @@
     </div>
 	<div class="card-body py-5">
 		<div class="row">
-			<div class="col-sm-9 offset-sm-1">
+			<div class="col-sm-10 offset-sm-1">
 
 				<div class="row my-3">
 					<div class="col-sm-4">
@@ -24,9 +24,9 @@
 
 									{% else %}
 										{% if conducteur.civilite == 'Mr' %}
-											<img src="{{ asset('img/user.png') }}" class="img-fluid" alt="">
+											<img src="{{ asset('img/user.jpg') }}" class="img-fluid" alt="">
 										{% else %}
-											<img src="{{ asset('img/femmel.png') }}" class="img-fluid" alt="">
+											<img src="{{ asset('img/femme.jpg') }}" class="img-fluid" alt="">
 										{% endif %}
 								{% endif %}
 
