--- a/templates/conducteur/show.html.twig
+++ b/templates/conducteur/show.html.twig
@@ -37,9 +37,9 @@
 									<img src="{{ vich_uploader_asset(conducteur) | imagine_filter('large_size') }}" class="img-fluid" alt="{{ conducteur.nom ~ ' ' ~ conducteur.prenom }}">
 								{% else %}
 									{% if conducteur.civilite == 'Mr' %}
-										<img src="{{ asset('img/user.png') }}" class="img-fluid" alt="">
+										<img src="{{ asset('img/user.jpg') }}" class="img-fluid" alt="">
 									{% else %}
-										<img src="{{ asset('img/femmel.png') }}" class="img-fluid" alt="">
+										<img src="{{ asset('img/femme.jpg') }}" class="img-fluid" alt="">
 									{% endif %}
 								{% endif %}
 
