Finalisation du projet

--- a/templates/commande/_facture.html.twig
+++ b/templates/commande/_facture.html.twig
@@ -56,34 +56,22 @@
 <table style="border: 1px solid black;width: 100%;margin-right: 10px">
 	<thead style="background: rgb(146, 248, 146);">
 		<tr>
-			<td>JR</td>
+			<td>N°</td>
 			<td>Désignation</td>
-			<td>Prix</td>
 			<td>Montant</td>
 		</tr>
 	</thead>
 	<tbody>
 		{% if commande.client.itineraires|length > 0 %}
 
-			{% for itineraire in commande.client.itineraires %}
-				<tr style="vertical-align: top;background: white;padding-bottom: 0;">
-					<td>{{ itineraire.id }}</td>
-					<td>{{ itineraire.designation }}</td>
-					<td>{{ itineraire.tarif }}</td>
-					<td>{{ itineraire.tarif ~ currency }}
-					</td>
-				</tr>
-			{% endfor %}
-
-		{% else %}
-
-			<!--<tr style="vertical-align: top;background: white;padding-bottom: 0;">
-				<td> commande.itineraire.id }}</td>
-				<td> commande.itineraire.designation }}</td>
-				<td> commande.itineraire.description }}</td>
-				<td> commande.itineraire.tarif ~ currency }}
-				</td>
-			</tr>-->
+		{% for itineraire in commande.client.itineraires %}
+		<tr style="vertical-align: top;background: white;padding-bottom: 0;">
+			<td>{{ itineraire.id }}</td>
+			<td>{{ itineraire.designation }}</td>
+			<td>{{ itineraire.tarif ~ currency }}
+			</td>
+		</tr>
+		{% endfor %}
 
 		{% endif %}
 
@@ -116,25 +104,114 @@
 <table style="width: 100%;border: 1px solid gray">
 	<tr>
 		<td style="width: 80%;"><br>
-			<p style="padding: 8px;">Date de reception
+			<p style="padding: 8px;">Date de facturation
 				<br>
 				{{ commande.created ? commande.created|date('d/m/Y: H:i:s') : '' }}
 				<br>
-				Date de livraison
-				<br>
-				{{ commande.updated ? commande.updated|date('d/m/Y: H:i:s') : '' }}
 			</p>
 		</td>
 		<td style="width: 20%;text-align:right;">
 			<p style="padding: 8px;">
 				{% if commande.qrcode %}
-					<small>{{ appName }}</small>
-					<br>
-					<img src="{{ commande.qrcode }}" width="70" height="70">
-					<br>
-					<small>Qrcode</small>
+				<small>{{ appName }}</small>
+				<br>
+				<img src="{{ commande.qrcode }}" width="70" height="70">
+				<br>
+				<small>Qrcode</small>
 				{% endif %}
 			</p>
 		</td>
 	</tr>
 </table>
+
+<div style="margin: 15px 0;">
+	<div style="width: 48%;display: inline-block;vertical-align: top;">
+		<h4>CAISSE d'EPARGNE</h4>
+		<h6>CE ILE DE FRANCE</h6>
+	</div>
+	<div style="width: 48%;display: inline-block;vertical-align: top;text-align: right">
+		<h6>Relevé d'Identité Caisse d'Epargne</h6>
+	</div>
+</div>
+
+<p style="padding: 1px;margin: 0;">Ce relevé est destiné à être remis, sur leur demande, à vos créanciers ou débiteurs
+	appelés à faire inscrire des opérations à votre compte (virément, paiement de quittance, etc.).</p>
+<p style="padding: 1px;margin: 0;">Son utilisation vous garantit le bon enregistrement des opérations en cause et vous
+	évite ainsi des réclamations pour erreurs ou retard d'imputation.</p>
+
+<table style="width: 100%;border: 2px solid black;margin: 15px 0;">
+	<thead>
+		<tr>
+			<th style="text-align: center;border: 2px solid black;">17515</th>
+			<th style="text-align: center;border: 2px solid black;">90000</th>
+			<th style="text-align: center;border: 2px solid black;">08036410893</th>
+			<th style="text-align: center;border: 2px solid black;">49</th>
+			<th style="text-align: center;border: 2px solid black;">CE ILE DE FRANCE</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td style="text-align: center;border: 2px solid black;">c/étab</td>
+			<td style="text-align: center;border: 2px solid black;">c/guichet</td>
+			<td style="text-align: center;border: 2px solid black;">n/compte</td>
+			<td style="text-align: center;border: 2px solid black;">c/rice</td>
+			<td style="text-align: center;border: 2px solid black;">domiciliation</td>
+		</tr>
+	</tbody>
+</table>
+
+<h4>IBAN</h4>
+
+<table style="width: 100%;border: 2px solid black;margin: 5px 0 15px 0;">
+	<thead>
+		<tr>
+			<th style="text-align: center;border: 2px solid black;">FR76</th>
+			<th style="text-align: center;border: 2px solid black;">1751</th>
+			<th style="text-align: center;border: 2px solid black;">5900</th>
+			<th style="text-align: center;border: 2px solid black;">0008</th>
+			<th style="text-align: center;border: 2px solid black;">0364</th>
+			<th style="text-align: center;border: 2px solid black;">1089</th>
+			<th style="text-align: center;border: 2px solid black;">349</th>
+		</tr>
+	</thead>
+</table>
+
+<h4>BIC</h4>
+
+<table style="width: 50%;border: 2px solid black;margin: 5px 0 15px 0;">
+	<thead>
+		<tr>
+			<th style="text-align: center;border: 2px solid black;">C</th>
+			<th style="text-align: center;border: 2px solid black;">E</th>
+			<th style="text-align: center;border: 2px solid black;">P</th>
+			<th style="text-align: center;border: 2px solid black;">A</th>
+			<th style="text-align: center;border: 2px solid black;">F</th>
+			<th style="text-align: center;border: 2px solid black;">R</th>
+			<th style="text-align: center;border: 2px solid black;">P</th>
+			<th style="text-align: center;border: 2px solid black;">P</th>
+			<th style="text-align: center;border: 2px solid black;">7</th>
+			<th style="text-align: center;border: 2px solid black;">5</th>
+			<th style="text-align: center;border: 2px solid black;">1</th>
+		</tr>
+	</thead>
+</table>
+
+<div>
+	<div style="width: 33%;display: inline-block;vertical-align: top;">
+		<h5>
+			CTRE D AFF ENTREP JOINVILLE LE P <br>
+			Immeuble le Vancouver <br>
+			3 ALLEE EDMEE LHEUREUX <br>
+			94340 JOINVILLE LE PONT
+			TEL: 01.82.01.14.39
+		</h5>
+	</div>
+	<div style="width: 30%;display: inline-block;vertical-align: top;text-align:right;">
+		<p><i>Intitulé du compte</i></p>
+	</div>
+	<div style="width: 32%;display: inline-block;vertical-align: top;">
+		<h5>STAF SAS <br> 10 RUE LAMARTINE <br> 94290 VILLENEUVE LE ROI</h5>
+	</div>
+</div>
+
+<hr style="border: 1px dotted black;">
