--- a/templates/mails/admin_mail.html.twig
+++ b/templates/mails/admin_mail.html.twig
@@ -1,30 +1,12 @@
-<p>Salut
-   {{ commande.conducteur.civilite }}
+<p>Une nouvelle commande vient d'être attribuée au conducteur:</p>
 
-   <strong>
-      {{ commande.conducteur.nom }}
-      {{ commande.conducteur.prenom }}
-   </strong>! une nouvelle commande vous à été attribuée
-</p>
-<h5>Detail de la commande:</h5>
+<h4>
+   {{ commande.conducteur.nom ?? '' }}
+   {{ commande.conducteur.prenom ?? '' }}
+</h4>
 
-<table style="width: 100%;">
-   <tbody>
-      <tr>
-         <th style="width: 40%; text-align:left;">Designation:</th>
-         <td>{{ commande.itineraire.designation }}</td>
-      </tr>
-      <tr>
-         <th style="width: 40%; text-align:left;">Date de chargement:</th>
-         <td>{{ commande.dateReception|date('d/m/Y à H:s:i') }}</td>
-      </tr>
-      <tr>
-         <th style="width: 40%; text-align:left;">Date de livraison:</th>
-         <td>{{ commande.dateLivraison|date('d/m/Y à H:s:i') }}</td>
-      </tr>
-   </tbody>
-</table>
-<br>
-<a href="{{ commande.itineraire.link }}" target="_blank" style="display: inline-block;padding: 15px;border-radius: 20px;background: #1f3c4d;color:white;text-decoration:none;">Voir l'itineraire sur la carte</a>
-<br><br>
+<h3>Details de la facture</h3>
+
+{% include "commande/_facture.html.twig" %}
+
 <h2>Merci!</h2>
