--- a/templates/mails/client_mail.html.twig
+++ b/templates/mails/client_mail.html.twig
@@ -1,30 +1,21 @@
 <p>Salut
-   {{ commande.client.civilite }}
+   {{ commande.client.civilite ?? '' }}
 
    <strong>
-      {{ commande.client.nom }}
-      {{ commande.client.prenom }}
-   </strong>! une nouvelle commande vous à été attribuée
+      {{ commande.client.nom ?? '' }}
+      {{ commande.client.prenom ?? '' }}
+   </strong>
 </p>
-<h5>Detail de la commande:</h5>
 
-<table style="width: 100%;">
-   <tbody>
-      <tr>
-         <th style="width: 20%; text-align:left;">Designation:</th>
-         <td>{{ commande.itineraire.designation }}</td>
-      </tr>
-      <tr>
-         <th style="width: 20%; text-align:left;">Date de chargement:</th>
-         <td>{{ commande.dateReception|date('d/m/Y à H:s:i') }}</td>
-      </tr>
-      <tr>
-         <th style="width: 20%; text-align:left;">Date de livraison:</th>
-         <td>{{ commande.dateLivraison|date('d/m/Y à H:s:i') }}</td>
-      </tr>
-   </tbody>
-</table>
+<h5>Votre commande est en cours de traitement</h5>
+
+
+<h3>Details de la facture</h3>
+
+{% include "commande/_facture.html.twig" %}
+
 <br>
-<a href="{{ commande.itineraire.link }}" target="_blank" style="display: inline-block;padding: 15px;border-radius: 20px;background: #1f3c4d;color:white;text-decoration:none;">Voir l'itineraire sur la carte</a>
+
+<a href="https://127.0.0.1:8000{{ path('client_commande_facture', { id: commande.id }) }}" target="_blank" style="display: inline-block;padding: 15px;border-radius: 20px;background: #1f3c4d;color:white;text-decoration:none;">Télecharger ma facture</a>
 <br><br>
 <h2>Merci!</h2>
